--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Varun Kumar Portfolio</title>
+  <title>Portfolio</title>
   <link rel="website icon" type="jpeg" href="img/Varun Kumarlogo.jpg">
   <meta content="hi" name="description">
   <meta content="" name="keywords">
@@ -97,7 +97,7 @@
           <div class="container">
             <h1 class="hero-title mb-4">I am Varun Kumar</h1>
             <p class="hero-subtitle">
-              <span class="typed" data-typed-items="Trainee,Administrator,Developer"></span><span class="typed-cursor" aria-hidden="true"></span>
+              <span class="typed" data-typed-items="Trainee,Developer"></span><span class="typed-cursor" aria-hidden="true"></span>
             </p>
           </div>
         </div>
@@ -135,9 +135,9 @@
                       <div class="row g-3">
                       <div class="row g-3">
                         <div class="col-md-6">
-                          <span>Skills </span> <span class="pull-right">60%</span>
-                          <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="70%" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:60%;"></div>
+                          <span>Skills </span> <span class="pull-right">0%</span>
+                          <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="0%" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%;"></div>
                           </div>
                         </div>
                       </div>
