--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                       </div>
                       <p class="lead">
 
-                        I am a Trainee studying Computer Engineering and IT Infrastructure at Nettur Technical Training Foundation, Bangalore. I am working on projects for NTTF. I am a web application developer, capable on maintaining and administering Microsoft Azure, capable of performing Testing in website. I have worked in Microsoft Devops platform. I use Django framework for developing web based applications and learning React JS and aware of Networking concepts. I am an Organized and dependable candidate successful at managing multiple priorities with a positive attitude. Willingness to take on added responsibilities to meet team goals. To seek and maintain full-time position that offers professional challenges utilizing interpersonal skills, excellent time management and problem-solving skills. I always will be eager to learn Innovative Technologies.
+                        About me need to be added.
 
                       </p>
                     </div>
@@ -245,7 +245,7 @@
                     <span>Knowledge: </span>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 45%">45% </div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%">0% </div>
                   </div>
                 </div>
               </div>
@@ -267,7 +267,7 @@
                     <span>Knowledge: </span>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 10%">10% </div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%">0% </div>
                   </div>
                 </div>
               </div>
@@ -289,7 +289,7 @@
                     <span>Knowledge: </span>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40% </div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%">1% </div>
                   </div>
                 </div>
               </div>
