--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
           <li><a class="nav-link scrollto" href="#services">Work</a></li>
           <li><a class="nav-link scrollto" href="#languages">Languages</a></li>
           <li><a class="nav-link scrollto" href="#education">Education</a></li>
-          <li class="dropdown"><a href="#"><span>Extras</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+          <!-- <li class="dropdown"><a href="#"><span>Extras</span> <i class="bi bi-chevron-down"></i></a> -->
+            <!-- <ul> -->
               <!-- <li><a href="myteam.html">My-Team</a></li>
               <li><a href="project.html">Projects</a></li>
               <li><a href="certificates.html">Certifications</a></li> -->
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#ContactModal">Contact</a></li>
-              <li><a href="Harsh-Resume.pdf" download="Harsh-Resume.pdf">Download Resume</a></li>
-            </ul>
+              <!-- <li><a href="#" data-bs-toggle="modal" data-bs-target="#ContactModal">Contact</a></li> -->
+              <!-- <li><a href="" download="Harsh-Resume.pdf">Download Resume</a></li> -->
+            <!-- </ul>   -->
           </li>
         </ul>
         <i class="bi mobile-nav-toggle bi-list"></i>
