--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       </div>
     </footer><!-- End  Footer -->
     
-    <a href="index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <a href="index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-house-up-fill"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
