--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <div class="hero-content display-table">
         <div class="table-cell">
           <div class="container">
-            <h1 class="hero-title mb-4">I am Harsha</h1>
+            <h1 class="hero-title mb-4">I am Varun</h1>
             <p class="hero-subtitle">
-              <span class="typed" data-typed-items="Trainee,Administrator,Developer"></span><span class="typed-cursor" aria-hidden="true"></span>
+              <span class="typed" data-typed-items="Trainee,Developer"></span><span class="typed-cursor" aria-hidden="true"></span>
             </p>
           </div>
         </div>
