--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <div class="card-body">
                 <h5 class="card-title">Secondary Education</h5>
                 <p class="card-text">I have completed my secondary education.</p>
-                <p class="card-text">From:</p>
+                <p class="card-text">From:sujana convent</p>
               </div>
             </div>
           </div>
