--- a/index.html
+++ b/index.html
@@ -135,12 +135,40 @@
                       <div class="row g-3">
                       <div class="row g-3">
                         <div class="col-md-6">
-                          <span>Skills </span> <span class="pull-right">0%</span>
+                          <span>Windows </span> <span class="pull-right">25%</span>
                           <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="0%" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:0%;"></div>
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:25%;"></div>
                           </div>
                         </div>
                       </div>
+
+                      <div class="row g-3">
+                        <div class="col-md-6">
+                          <span> Linux </span> <span class="pull-right">10%</span>
+                          <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="0%" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:10%;"></div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row g-3">
+                        <div class="col-md-6">
+                          <span>Office 365 </span> <span class="pull-right">15%</span>
+                          <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="0%" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:15%;"></div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row g-3">
+                        <div class="col-md-6">
+                          <span>LeaderShip </span> <span class="pull-right">5%</span>
+                          <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="0%" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:5%;"></div>
+                          </div>
+                        </div>
+                      </div>
+                      
 
                     </div>
                   </div>
@@ -186,7 +214,7 @@
             <div class="col-sm-6">
               <div class="pb-4">
                 <div class="card bg-white rounded border-bottom border-secondary">
-                  <h5 class="card-header text-info bg-dark">fill</h5>
+                  <h5 class="card-header text-info bg-dark">IOT</h5>
                   <div class="card-body">
                     <p class="card-text">fill</p>
                   </div>
