--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- ======= Hero Section ======= -->
   <div>
 
-    <div id="hero" class="hero route bg-image" style="background-image: url(https://i.pinimg.com/originals/55/74/54/557454f9d762c6b6c9efdaec66b4dbb9.jpg)">
+    <div id="hero" class="hero route bg-image" style="background-image: url(https://pixabay.com/photos/ocean-milky-way-boat-sailing-3605547/)">
       <div class="overlay-itro"></div>
       <div class="hero-content display-table">
         <div class="table-cell">
